Fix: makefile warnings

--- a/src/Makefile
+++ b/src/Makefile
@@ -51,9 +51,11 @@ CFLAGS	:= -g -Wall -O2 -mword-relocations \
 			-fomit-frame-pointer \
 			$(ARCH)
 
-CFLAGS	+=	$(INCLUDE) -DARM11 -D_3DS -std=c99
+CFLAGS	+=	$(INCLUDE) -DARM11 -D_3DS
 
 CXXFLAGS	:= $(CFLAGS) -fno-rtti -fno-exceptions -std=gnu++11
+
+CFLAGS  +=  -std=c99
 
 ASFLAGS	:=	-g $(ARCH)
 LDFLAGS	=	-specs=3dsx.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
@@ -130,17 +132,12 @@ all: $(BUILD)
 
 $(BUILD):
 	@[ -d $@ ] || mkdir -p $@
-	@make --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
+	@make -s --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
 
 #---------------------------------------------------------------------------------
 clean:
 	@echo clean ...
 	@rm -fr $(BUILD) $(TARGET).3dsx $(OUTPUT).smdh $(TARGET).elf
-
-#---------------------------------------------------------------------------------
-run:
-	@echo run ...
-	$(TARGET).3dsx > 3dsjs.log
 
 #---------------------------------------------------------------------------------
 else
