Add support for zlib (Taken from LPP).

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,7 @@ ifeq ($(strip $(CTRULIB)),)
 $(error "Please set CTRULIB in your environment. export CTRULIB=<path to>libctru")
 endif
 
+3DSJS_LIBS ?= $(CURDIR)
 TOPDIR ?= $(CURDIR)
 include $(DEVKITARM)/3ds_rules
 
@@ -60,13 +61,13 @@ CFLAGS  +=  -std=c99
 ASFLAGS	:=	-g $(ARCH)
 LDFLAGS	=	-specs=3dsx.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
 
-LIBS	:= -lctru -lm
+LIBS	:= -lctru -lm -lz
 
 #---------------------------------------------------------------------------------
 # list of directories containing libraries, this must be the top level containing
 # include and lib
 #---------------------------------------------------------------------------------
-LIBDIRS	:= $(CTRULIB) $(PORTLIBS)
+LIBDIRS	:= $(CTRULIB) $(PORTLIBS) $(3DSJS_LIBS)
 
 
 #---------------------------------------------------------------------------------
